welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:11: error: expected class or object definition
def  colonne(T:Array[Color]){
^